Prepare for Netlify deployment: Add serverless function and configuration

--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
-  "name": "server",
+  "name": "antigravity-project",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ezequielmanchula/catalogo-libreria.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/ezequielmanchula/catalogo-libreria/issues"
+  },
+  "homepage": "https://github.com/ezequielmanchula/catalogo-libreria#readme",
   "dependencies": {
-    "cors": "^2.8.6",
     "express": "^5.2.1",
     "serverless-http": "^4.0.0",
     "sqlite3": "^5.1.7"
